--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,5 +71,27 @@ dependencies {
 
     compile 'com.github.GrenderG:Prefs:1.1'
 
+    jacoco {
+        toolVersion = "0.7.7.201606060606"
+    }
+
+    task jacocoReport(type: JacocoReport, dependsOn: "connectedAndroidTest") {
+        sourceDirectories = files(['**/src/main/java'])
+
+        classDirectories = fileTree(
+                dir: '**/classes',
+                excludes: [
+                        '**/R.class',
+                        '**/R$*.class',
+                        '**/BuildConfig.*',
+                        '**/Manifest*.*',
+                        '**/*Test*.*',
+                        '**/android/**/*.*'
+                ]
+        )
+
+        executionData = files('build/outputs/code-coverage/connected/coverage.ec')
+    }
+//    apply plugin: 'com.google.gms.google-services'
 
 }
